<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="package_name">de.tud.kp.geoguessrcast</string>
    <string name="userChannel">urn:x-cast:de.tud.kp.geoguessrcast.userChannel</string>
    <string name="adminChannel">urn:x-cast:de.tud.kp.geoguessrcast.adminChannel</string>
    <string name="gameChannel">urn:x-cast:de.tud.kp.geoguessrcast.gameChannel</string>
    <string name="app_name">GeoGuessrCast</string>
    <string name="app_id">BB3F2634</string>
    <string name="action_settings">Settings</string>
    <string name="message_to_cast">Message to Cast…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="welcome_message">Welcome to GeoGuessr</string>
    <string name="start_game">Los!</string>
    <string name="wait_game_message_1">Admin is choosing game settings, please wait till the game starts!</string>
    <string name="wait_game_message_2">Please wait till the game starts!</string>
    <string name="wait_game_round">Please wait for all players to choose answer.</string>
    <string name="tip">Tip</string>
    <string name="customize_tip_title">Proceed with Caution</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="player_confirm_tip">Congrats! You are the admin now! Make sure that all players have already connected to the game.</string>
    <string name="customize_confirm_tip">Watch out! You are entering the custom mode! It\'s only for players who have many experiences with the settings!</string>
    <string name="high_score_tip"> High Score is already shown on the screen!</string>
    <string name="choose_mode">Start Choosing Mode!</string>
    <string name="start_customize">Start Customizing!</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points_abbreviation">&#160;Pts</string>
    <string name="slash">&#160;/&#160;</string>
    <string name="high_score">High score</string>
    <string name="number_abbr">No.</string>
    <string name="username_hint">Enter your name</string>
    <string name="username_empty_tip">Please enter your name first</string>
    <string name="answer_label">Answer: </string>
    <string name="hardness_label">Difficulty Levels: </string>
    <string name="freechoice_tooltip">Freely type in the name of the given city or country on your phone, nearest guess gets most points.</string>
    <string name="multiplechoice_tooltip">Choose the right city or country between possible answers, only the right answer gets points.</string>
    <string name="pointingmode_tooltip">You get to see the name of the city or country on the screen and point on the map on your phone to the location, nearest guess gets most points.</string>
    <string name="connect_failed_info">Connection Failed, please try again!</string>

    <string name="about_label">About</string>
    <!--TODO: add version control library...-->
    <string name="pref_version_label">Version</string>
    <string name="pref_version">0.1</string>
    <string name="pref_developer_label">Developer</string>
    <string name="pref_developer">Falk Morus, Kaijun Chen, Martin Haut, Stefan Herrmann</string>
    <string name="pref_promoted_by_label">Promoted by</string>
    <string name="pref_promoted_by">Chair for Computer Networks at Dresden University of Technology</string>
    <string name="pref_licence_label">License</string>
</resources>