<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="pref_official_weibo_key"
        android:title="@string/app_name"
        >
        <!--<intent-->
            <!--android:action="android.intent.action.VIEW"-->
            <!--android:data="@string/weiciyuanOfficalWeiboName" />-->
    </Preference>

    <Preference
        android:title="@string/pref_version_label"
        android:key="pref_version_key"
        />

    <Preference
        android:title="@string/pref_developer_label"
        android:summary="@string/pref_developer"
        />
    <Preference
        android:title="@string/pref_promoted_by_label"
        android:summary="@string/pref_promoted_by">
    </Preference>


    <Preference android:title="@string/pref_licence_label">
        <intent
            android:targetPackage="@string/package_name"
            android:targetClass="de.tud.kp.geoguessrcast.LicenseActivity"/>
    </Preference>
</PreferenceScreen>
