<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/playerConfirmTip">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/tip"
            android:paddingBottom="30sp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:text="@string/player_confirm_tip"
            android:paddingBottom="30sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chooseMode"
            android:text="@string/choose_mode"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/gameModes">

        <ListView android:id="@+id/game_modes_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/gameProfiles">


        <ListView android:id="@+id/game_profiles_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true" />


    </LinearLayout>
</LinearLayout>